<resources>
    <string name="nav_product_list">SẢN PHẨM</string>
    <string name="nav_product_detail">CHI TIẾT SẢN PHẨM</string>
    <string name="nav_variant_detail">CHI TIẾT PHIÊN BẢN</string>
    <string name="nav_order">ĐƠN HÀNG</string>
    <string name="nav_product_selection">CHỌN SẢN PHẨM</string>
    <string name="app_name">Sapo Demo</string>
    <string name="on_hand">Tồn kho</string>
    <string name="available">Có thể bán</string>
    <string name="sku">SKU</string>
    <string name="barcode">Barcode</string>
    <string name="sellable">Cho phép bán</string>
    <string name="not_sellable">Không thể bán</string>
    <string name="active">Đang giao dịch</string>
    <string name="inactive">Ngừng giao dịch</string>
    <string name="product">Sản phẩm</string>
    <string name="variant">Phiên bản</string>
    <string name="count_version">Số phiên bản</string>
    <string name="additional_infor">Thông tin thêm</string>
    <string name="catagory">Loại sản phẩm</string>
    <string name="branch">Nhãn hiệu</string>
    <string name="description">Mô tả</string>
    <string name="variant_of_product">Phiên bản sản phẩm</string>
    <string name="delete_product">Xóa sản phẩm</string>
    <string name="weight">Khối lượng</string>
    <string name="unit">Đơn vị tính</string>
    <string name="size">Kích thước</string>
    <string name="color">Màu sắc</string>
    <string name="material">Chất liệu</string>
    <string name="product_price">Giá sản phẩm</string>
    <string name="no_include_tax">Không bao gồm thuế</string>
    <string name="output_vat_rate">Thuế đầu ra</string>
    <string name="input_vat_rate">Thuế đầu vào</string>
    <string name="retail_price">Giá bán lẻ</string>
    <string name="whole_price">Giá bán buôn</string>
    <string name="import_price">Giá nhập</string>
    <string name="ware_house">Kho hàng</string>
    <string name="default_branch">Chi nhánh mặc định</string>
    <string name="warehouse_location">Vị trí lưu kho</string>
    <string name="conversion_unit">Đơn vị quy đổi</string>
    <string name="delete_variant">Xóa phiên bản</string>
    <string name="product_detail">Chi tiết sản phẩm</string>
    <string name="variant_detail">Chi tiết phiên bản</string>
    <string name="name">Tên</string>
    <string name="catagory_description_of_product">Mô tả, phân loại sản phẩm</string>
    <string name="name_sku_barcode">Tên, SKU, Barcode</string>
    <string name="empty_product_list_message">Danh sách sản phẩm của bạn hiện đang trống</string>
    <string name="empty_variant_list_message">Danh sách phiên bản của bạn hiện đang trống</string>
    <string name="empty_product_of_order_message">Đơn hàng của bạn chưa có sản phẩm nào</string>
    <string name="choose_product">Chọn sản phẩm</string>
    <string name="apply_promo">Áp dụng mã khuyến mãi</string>
    <string name="total_quantity">Tổng số lượng</string>
    <string name="total_price">Tổng tiền hàng</string>
    <string name="tax">Thuế</string>
    <string name="discount">Chiết khấu</string>
    <string name="deliver_charge">Phí giao hàng</string>
    <string name="customer">Khách hàng</string>
    <string name="add_customer">Thêm khách hàng</string>
    <string name="select_payment_method">Chọn phương thức thanh toán</string>
    <string name="add_note">Thêm ghi chú</string>
    <string name="provisional">Tạm tính</string>
    <string name="create_and_delivery">Tạo đơn và giao hàng</string>
    <string name="search_product_and_add_to_order">Tìm và thêm sản phẩm vào đơn hàng</string>
    <string name="is_multiple_selection">isMultipleSelection</string>
    <string name="create_order_success">Tạo đơn hàng thành công</string>
    <string name="message_confirm_delete_product">Bạn có muốn xóa sản phẩm %s ra khỏi đơn hàng không?</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Hủy</string>
    <string name="lack_of_goods">Thiếu hàng</string>
    <string name="empty_order">Đơn hàng của bạn chưa có sản phẩm nào!</string>
    <string name="reselect">Chọn lại</string>
    <string name="submit">Xong</string>
</resources>