<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvSelectedProductListName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/ivSelectedProductListCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_cancle" />

    <RelativeLayout
        android:id="@+id/rlSelectedProductListContainSKU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSelectedProductListName">

        <TextView
            android:id="@+id/tvSelectedProductListSkuCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sku" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvSelectedProductListSkuCode"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSelectedProductListMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_minus" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tvSelectedProductListQuantity"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center"
                    android:text="99.99..." />
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/ivSelectedProductListAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlSelectedProductListContainSKU">

        <TextView
            android:id="@+id/tvSelectedProductListItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="500000"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llSelectedProductListWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_warning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/lack_of_goods"
                android:textColor="@color/red" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>