<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swprfsProductSelection"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.fragment.ProductSelectionFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/crdProductSelectionSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp">

            <SearchView
                android:id="@+id/sevProductSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:iconifiedByDefault="false"
                android:padding="2dp"
                android:queryHint="@string/name_sku_barcode"
                android:background="@android:color/transparent"
                />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/crdProductSelectionFooter"
            android:layout_below="@id/crdProductSelectionSearch"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#E5E8E5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvProductSelectionTotalCount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:text="Tất cả loại sản phẩm"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/tglBtnProductSelectionMultipleSelection"
                        android:text="Chọn nhiều"
                        android:textColor="@color/black" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/tglBtnProductSelectionMultipleSelection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:trackTint="@color/switch_track_selector"
                        app:thumbTint="@color/switch_thumb_selector"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvProductSelectionEmptyMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_product_list_message"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rclvProductSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/crdProductSelectionFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnProductSelectionReselect"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/reselect"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnProductSelectionSubmit"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@color/blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>